@@ -1,3 +1,12 @@
+2001-01-26  Havoc Pennington  <hp@redhat.com>
+
+	* gdk-pixbuf-io.c (mname): fix included modules case.
+
+2001-01-22  Havoc Pennington  <hp@redhat.com>
+
+	* gdk-pixbuf-io.c (gdk_pixbuf_new_from_xpm_data): check errors 
+	from gdk_pixbuf_load_module
+
 2001-01-22  Havoc Pennington  <hp@redhat.com>
 
 	* Makefile.am: Add built marshaller files to support
